[workspace]
resolver = "2"
members = [
    "cli",
    "engine",
    "server",
    "shared",
    "web/tauri",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 3

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
