[workspace]
resolver = "2"
members = [
    "zoop_cli",
    "zoop_engine",
    "zoop_server",
    "zoop_shared",
    "zoop_web/zoop_tauri",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 3

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
