[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["serde_derive"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
serde_json = "*"
derive_more = { version = "0.99.17" }

[lib]
name = "shared"
