[package]
name = "zoop_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zoop_shared = { path = "../zoop_shared" }
zoop_engine = { path = "../zoop_engine" }
clap = { version = "4.1.11", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
url = "2.3.1"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }

[[bin]]
name = "zoop_cli"
path = "src/main.rs"

[lib]
name = "zoop_cli"
