[package]
name = "zoop_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9.1", features = [] }
bevy-inspector-egui = "0.17.0"
bevy_rapier2d = { version = "0.20.0", features = [ "serde-serialize", "enhanced-determinism" ] }
nalgebra = "0.32.2"
bevy_prototype_debug_lines = { version = "0.9", optional = true }
bevy_ggrs = "0.11.0"
ggrs = "0.9.3"
bytemuck = "1.13.1"
zoop_shared = { path = "../zoop_shared" }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0"
ewebsock = "0.2.0"
url = "2.3.1"
bincode = "1.3.3"

[features]
development = ["bevy_dynamic"] # Experimental
bevy_dynamic = ["bevy/dynamic"] # Experimental: Faster development environment
rapier_debug_physics = ["bevy_rapier2d/debug-render-2d"] # Rapier debug wireframes
world_debug = [] # Bevy ECS introspection UI
debug_lines = ["dep:bevy_prototype_debug_lines"] # Game force vectors

[lib]
name = "zoop_engine"
crate-type = ["cdylib", "rlib"]

