[package]
name = "zoop_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10.1", features = [] }
bevy-inspector-egui = "0.18.3"
bevy_rapier2d = { version = "0.21.0", features = [ "wasm-bindgen", "serde-serialize", "enhanced-determinism" ] }
console_error_panic_hook = { version = "0.1", optional = true }
nalgebra = "0.32.2"
bevy_prototype_debug_lines = { version = "0.10.1", optional = true }
bevy_ggrs = "0.12.0"
ggrs = "0.9.3"
bytemuck = "1.13.1"
zoop_shared = { path = "../zoop_shared" }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0"
ewebsock = "0.2.0"
url = "2.3.1"
bincode = "1.3.3"
wasm-bindgen = "0.2"
reqwest-wasm = { version = "0.11.16", features = ["blocking"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = []
bevy_dynamic = ["bevy/dynamic_linking"] # Experimental: Faster development environment
rapier_debug_physics = ["bevy_rapier2d/debug-render-2d"] # Rapier debug wireframes
world_debug = [] # Bevy ECS introspection UI
debug_lines = ["dep:bevy_prototype_debug_lines"] # Game force vectors
console_errors = ["dep:console_error_panic_hook"] # Print panics to browser console
ggrs_desync_detection = [] # GGRS native desync detection (questionable)

[lib]
name = "zoop_engine"
crate-type = ["cdylib", "rlib"]

