[package]
name = "zoop_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-broker = "0.4.3"
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
derive_more = "0.99.17"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
zoop_shared = { path = "../zoop_shared" }

[[bin]]
name = "zoop_server"
path = "src/main.rs"
