[package]
name = "zoop_gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "zoop_gui"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = [] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
clap = { version = "4.1.11", features = ["derive"] }
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
zoop_engine = { path = "../../zoop_engine" }
zoop_shared = { path = "../../zoop_shared" }
zoop_cli = { path = "../../zoop_cli" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "zoop_gui"
path = "src/main.rs"
